--- a/MeMeChallenge/Base.lproj/Main.storyboard
+++ b/MeMeChallenge/Base.lproj/Main.storyboard
@@ -64,7 +64,11 @@
                                                 <action selector="sendMeme:" destination="BYZ-38-t0r" id="KlV-qx-cVz"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="F9z-ZU-elv"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="F9z-ZU-elv" userLabel="Org">
+                                            <connections>
+                                                <segue destination="eHo-g3-Qxw" kind="show" id="xP6-W5-ghv"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -110,13 +114,146 @@
                         <outlet property="cameraButton" destination="UIE-jn-zqb" id="9QM-De-me5"/>
                         <outlet property="imageView" destination="331-yR-UAB" id="T5b-b7-iTD"/>
                         <outlet property="navbar" destination="ujj-d2-wf3" id="3ts-Tf-2nW"/>
+                        <outlet property="shareButton" destination="xEv-VE-8ag" id="GSd-Ea-xPq"/>
                         <outlet property="toolbar" destination="eSn-Hk-57b" id="63b-K2-uax"/>
                         <outlet property="topTextField" destination="gsx-HU-GLl" id="GvJ-Z2-bQ0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="290"/>
+            <point key="canvasLocation" x="-1144" y="-297"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="HIq-Dj-JN8">
+            <objects>
+                <tabBarController id="eHo-g3-Qxw" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="c0H-jh-D41">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="IRg-Ji-Wgt" kind="relationship" relationship="viewControllers" id="nFA-5N-FWK"/>
+                        <segue destination="ThE-0J-Ll4" kind="relationship" relationship="viewControllers" id="CrL-Cu-bbU"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GX9-Gk-yLZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-365" y="-297"/>
+        </scene>
+        <!--Sent Mems Table View Controller-->
+        <scene sceneID="5bz-66-yW8">
+            <objects>
+                <viewController id="ThE-0J-Ll4" customClass="SentMemsTableViewController" customModule="MeMeChallenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DL4-uI-Iqv"/>
+                        <viewControllerLayoutGuide type="bottom" id="eNm-uN-Hs7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="m8p-Hs-UpT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="121" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="JsP-ic-nsD">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableCell" textLabel="80M-Y8-L6S" imageView="vae-1C-cFx" rowHeight="121" style="IBUITableViewCellStyleDefault" id="0py-4G-OeE">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="121"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0py-4G-OeE" id="QJH-lc-xLf">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="80M-Y8-L6S">
+                                                    <rect key="frame" x="94" y="0.0" width="491" height="120"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="camera" id="vae-1C-cFx">
+                                                    <rect key="frame" x="15" y="28" width="64" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iGj-Fa-Qoo">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="Zha-ho-Hwb">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Q5l-3M-93Q" userLabel="Item">
+                                            <connections>
+                                                <action selector="newMeMe:" destination="ThE-0J-Ll4" id="pdQ-g8-3kR"/>
+                                                <segue destination="BYZ-38-t0r" kind="show" id="LTj-50-UNW"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JsP-ic-nsD" firstAttribute="top" secondItem="iGj-Fa-Qoo" secondAttribute="bottom" id="2TU-Yq-tMe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iGj-Fa-Qoo" secondAttribute="trailing" constant="-20" id="7RP-zM-UhI"/>
+                            <constraint firstItem="iGj-Fa-Qoo" firstAttribute="leading" secondItem="m8p-Hs-UpT" secondAttribute="leadingMargin" constant="-20" id="S7N-Wj-Kcg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JsP-ic-nsD" secondAttribute="trailing" constant="-20" id="dyD-Xi-IIF"/>
+                            <constraint firstItem="iGj-Fa-Qoo" firstAttribute="top" secondItem="m8p-Hs-UpT" secondAttribute="topMargin" constant="20" id="eIW-at-YoF"/>
+                            <constraint firstItem="eNm-uN-Hs7" firstAttribute="top" secondItem="JsP-ic-nsD" secondAttribute="bottom" id="haM-Na-aBH"/>
+                            <constraint firstItem="JsP-ic-nsD" firstAttribute="leading" secondItem="m8p-Hs-UpT" secondAttribute="leadingMargin" constant="-20" id="qpJ-WD-DxG"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" image="list_btn" id="Z7v-Fn-Mwb"/>
+                    <connections>
+                        <outlet property="tableView" destination="JsP-ic-nsD" id="w6k-cI-ij5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kuo-y7-Lcd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="338" y="-292"/>
+        </scene>
+        <!--MeMe as Collection-->
+        <scene sceneID="eXr-bF-que">
+            <objects>
+                <collectionViewController title="MeMe as Collection" id="IRg-Ji-Wgt" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="VNc-UT-vmU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GSS-uT-nR8">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nhv-OQ-FNI">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="IRg-Ji-Wgt" id="1U2-hF-3RU"/>
+                            <outlet property="delegate" destination="IRg-Ji-Wgt" id="qL9-lq-KD4"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="" image="grid_block_alt-512" id="G0E-sA-jSs"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uVF-JX-c7c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="344" y="460"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="64" height="64"/>
+        <image name="grid_block_alt-512" width="20" height="20"/>
+        <image name="list_btn" width="25" height="25"/>
+    </resources>
 </document>
